@@ -81,7 +81,7 @@ int	add_user_parameter(char *key, char *command)
 	char		usr_cmd[MAX_STRING_LEN];
 	char		usr_param[MAX_STRING_LEN];
 	unsigned	flag = 0;
-	
+
 	if (0 == (i = parse_command(key, usr_cmd, MAX_STRING_LEN, usr_param, MAX_STRING_LEN)))
 	{
 		zabbix_log( LOG_LEVEL_WARNING, "Can't add user specifed key \"%s\". Can't parse key!", key);
